Fix the python code, removed unnecessary JPMS and increase the stop wait sec